# luxor-barque

./: .env.example  .gitignore  BARQUE-PROJECT-STATUS.md  CHANGELOG-CONFIG-SYSTEM.md  CLI-CHEATSHEET.md  CONFIG.md  CONFIGURATION-GUIDE.md  CURRENT-STATUS-SUMMARY.md  DEPLOYMENT-SUMMARY.md  Dockerfile  EMAIL-EXTENSION-COMPLETE.md  EMAIL-GUIDE.md  EMAIL-QUICK-START.md  EMAIL-SETUP.md  IMPLEMENTATION-COMPLETE.md  LICENSE  MICROSERVICE-GUIDE.md  PRODUCTION-READY-SUMMARY.md  QUICK-START.md  README.md  TEST-EXAMPLES.md  TEST-RESULTS.md  TESTING-GUIDE.md  barque_service.py  docker-compose.yml  pyproject.toml  quick-test.sh  requirements-service.txt  setup-barque-alias.sh  setup.py  test-api-with-paper2agent.sh  test-barque.sh  test-cli-with-paper2agent.sh  test_example.md
.barque/: config.yaml  email.example.yaml
barque/: __init__.py
barque/cli/: __init__.py  commands.py
barque/core/: __init__.py  config.py  email.py  email_config.py  generator.py  metadata.py  themes.py  user_config.py
